--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2024.04.01"
 koinVer = "3.5.6"
 chuckerVer = "4.0.0"
 ktorVer = "2.3.7"
+paging = "3.3.5"
+pagingCompose = "3.3.5"
 
 
 [libraries]
@@ -42,9 +44,13 @@ chucker-no-op = { module = "com.github.chuckerteam.chucker:library-no-op", versi
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinVer" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinVer" }
 
+paging = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
+paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
+
 
