--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,9 @@ kotlinCoroutineTest = "1.7.3"
 mockk = "1.13.7"
 ktorMock = "2.3.4"
 turbineVer = "0.12.1"
+roomVer = "2.5.2"
+material3Ver = "1.3.0"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -70,11 +73,16 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 ktor-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktorMock" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVer" }
 
+room = { module = "androidx.room:room-runtime", version.ref = "roomVer" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomVer" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomVer" }
+
+material3 = { module = "androidx.compose.material3:material3", version.ref = "material3Ver" }
+
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-
 
 
 [plugins]
